fix: refactor all stacking issues (z-index)
Remove the `z-index`es and rely on default stacking contexts
provided by Bootstrap Italia.

We should probably never use z-index, and if we do for special
cases, we should always use Bootstrap Italia variables.

The special case here is the sidebar - which in itself is a strange
component - and maybe we can remove the special casing for it as well
by adding the `.modal` class in JS when on mobile viewports, maintaining
the same semantics (in practice the sidebar turns into a modal on small
viewports).

In case there is something wrong in BI stacking in the future, we can fix
it there (https://github.com/italia/bootstrap-italia/issues/1009)

Fix #1038.

--- a/src/components/nav-sidebar/nav-sidebar.scss
+++ b/src/components/nav-sidebar/nav-sidebar.scss
@@ -1,3 +1,4 @@
+@use "bootstrap/scss/bootstrap-utilities" as bootstrap;
 @import "../../scss/bootstrap-breakpoints";
 
 .nav-sidebar {
@@ -86,7 +87,7 @@
 //Mobile & Tablet portrait only -------------------------------------------------------------------------
 @include media-breakpoint-down(lg) {
   .menu-column {
-    z-index: 10010 !important;
+    z-index: bootstrap.$zindex-modal;
   }
 }
 
@@ -102,7 +103,6 @@
     .it-navscroll-wrapper {
       background-color: transparent !important;
       .menu-wrapper {
-        z-index: 0;
         background-color: transparent !important;
       }
     }
